@@ -21,9 +21,10 @@
         'Top level (no parent)' => 'Top level (no parent)',
         'Target' => 'Target',
         'Publish' => 'Publish',
-        'static articles' => 'static articles',
         'Select a content' => 'Select an article',
-        'dynamic sections' => 'dynamic sections',
+        'pre-existing static content' => 'pre-existing static content',
+        'output from specified module' => 'output from specified module',
+        'select where your content is coming from' => 'select where your content is coming from',
         'Alias' => 'Alias',
         'Add an alias' => 'Add an alias',
         'Automatic alias' => 'Automatic alias',
@@ -40,6 +41,7 @@
         'Additional params' => 'Additional params',
         'Anchor' => 'Anchor',
         'just the anchor name' => 'just the anchor name',
+        'specify the section under which yours will be placed' => 'specify the section under which yours will be placed',
         'Can view' => 'Can view',
         'All roles' => 'All roles',
         'Please fill in a title' => 'Please fill in a title',
@@ -91,7 +93,7 @@
         'Module' => 'Module',
         'none' => 'none',
         'Section info' => 'Section info',
-        'Optimisation' => 'Optimisation',
+        'Accessibility' => 'Accessibility',
         'Select roles to which you want to grant access' => 'Select roles to which you want to grant access',
         'Section Manager :: Add' => 'Section Manager :: Add',
         'Editing options' => 'Editing options',
