@@ -10,10 +10,11 @@ recordLogin     = true
 observers       = RecordLogin ;,DoFudLogin
 
 [OrgMgr]
-enabled         = false
+enabled         = false ; to be able to manage orgs, the admin user needs to create
+                        ; the relevant section using the Navigation tools
 requiresAuth    = true
 adminGuiAllowed = true
-typeEnabled     = false
+typeEnabled     = false ; organisations can be typed, choose this to enabled editing options
 
 [OrgTypeMgr]
 requiresAuth    = true
